# C_Exercism

./: CMakeLists.txt  armstrong_numbers.c  armstrong_numbers.h  difference_of_squares.c  difference_of_squares.h  grade_school.c  grade_school.h  grains.c  grains.h  hamming.c  hamming.h  isogram.c  isogram.h  main.c  square_root.c  square_root.h
One/: One.c  One.h
